--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "edudr",
-    "short_name": "edudr",
+    "name": "busara",
+    "short_name": "busara",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
