--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,12 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flip_card: ^0.6.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  modal_bottom_sheet: ^2.0.0
   provider: ^6.0.1
 
 dev_dependencies:
