--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  desktop_window: ^0.4.0
   flip_card: ^0.6.0
   flutter:
     sdk: flutter
