--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  lottie: ^1.2.1
   modal_bottom_sheet: ^2.0.0
   provider: ^6.0.1
+  rive: ^0.7.33
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +36,4 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/images/kingdom/
+    - assets/animations/
